--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     
         
     <style>
+	    p.sansserif {
+    font-family: Verdana, sans-serif;
+}
     #welcome {
 	    width: 100%;
 	    height:100%;
@@ -22,6 +25,6 @@
 
 <body>
 	<div id="welcome">
-<p>website under construction<p>
+<p class="sanserif">website under construction<p>
 	</div>
 </body>
