--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <body>
 	<div id="welcome">
+		<img src="data/welcome.jpg" alt="welcome" height="100%" width="100%">
 <p class="sanserif">website under construction<p>
 	</div>
 </body>
