--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <body>
 	<div id="welcome">
 		<img src="data/welcome.jpg" alt="welcome" height="100%" width="100%">
+		</div>
+	<div id="welcome">
+		
 <p class="sanserif">website under construction<p>
 	</div>
 </body>
