--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
 	
-		<img src="data/welcome.jpg" alt="welcome" height="100%" width="100%">
+		<img src="data/welcome.jpg" alt="welcome" height="auto" width="100%">
 		
 	<div id="welcome">
 		
