--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     
         
     <style>
+	    img {
+    width: 100%;
+    height: auto;
+}
 	    p.sansserif {
     font-family: Verdana, sans-serif;
 }
@@ -25,7 +29,7 @@
 
 <body>
 	
-		<img src="data/welcome.jpg" alt="welcome" height="auto" width="100%">
+		<img src="data/welcome.jpg" alt="welcome" height="1133px" width="2000px">
 		
 	<div id="welcome">
 		
