--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 	
-		<img src="data/welcome.jpg" alt="welcome" height="1133px" width="2000px">
+		<img src="data/Elena Adamou_Time-Counter 774'.jpg" alt="welcome" height="1133px" width="2000px">
 		
 	<div id="welcome">
 		
