--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 
 <div class="mySlides fade" style="border:1px solid black; padding: 2%">
 
-<p class="detail">E-MAIL</p><p class="detail" style="font-size: 1.4vw">adamou.elena@hotmail.com</p>
+<p class="detail">E-MAIL</p><p class="detail" style="font-size: 1.2vw text-align: center;">adamou.elena@hotmail.com</p>
     
    
 
@@ -52,14 +52,14 @@
 <br>
         <div style="border:1px solid black; padding: 2%">
 
-<p class="detail">FACEBOOK</p><p class="detail" style="font-size: 1.4vw"><a href="https://www.facebook.com/eladamou" style ="text-decoration: none; color: black; ">facebook.com/eladamou</a></p>
+<p class="detail">FACEBOOK</p><p class="detail" style="font-size: 1.2vw; text-align: center;"><a href="https://www.facebook.com/eladamou" style ="text-decoration: none; color: black; ">facebook.com/eladamou</a></p>
 
 
 </div>
         <br>
         <div style="border:1px solid black; padding: 2%">
 
-<p class="detail">INSTAGRAM</p><p class="detail" style="font-size: 1.4vw"><a href="https://www.instagram.com/novegradi/?hl=it" style ="text-decoration: none; color: black; ">instagram.com/novegradi</a></p>
+<p class="detail">INSTAGRAM</p><p class="detail" style="font-size: 1.2vw text-align: center;"><a href="https://www.instagram.com/novegradi/?hl=it" style ="text-decoration: none; color: black; ">instagram.com/novegradi</a></p>
 
 
 </div>
