--- a/4systems.html
+++ b/4systems.html
@@ -102,7 +102,7 @@ Shot in Cyprus, Milan, Niece, Passignano Sul Trasimeno, Rome, L’Aquila.</span>
                           <div class="mySlides fade">
   
   <img src="/immagini/4Systems/4Systems%20Adamou%201c.jpg" style="width:98%" border="1">
-  <p class="detail" style="text-align:right; ">THD VIDEO, COLOR, SOUND, 15'42'', 2015 _SCREEN 3  </p> 
+  <p class="detail" style="text-align:right; ">HD VIDEO, COLOR, SOUND, 15'42'', 2015 _SCREEN 3  </p> 
 </div>
                           
                           <div class="mySlides fade">
@@ -115,7 +115,7 @@ Shot in Cyprus, Milan, Niece, Passignano Sul Trasimeno, Rome, L’Aquila.</span>
      <div class="mySlides fade">
   
   <img src="/immagini/4Systems/4systems%20combo%20web.jpg" style="width:98%" border="1">
-  <p class="detail" style="text-align:right; ">HD VIDEO, COLOR, SOUND, 15'42'', 2015 _FOUR SCREEN OVERVIEW  </p> 
+  <p class="detail" style="text-align:right; ">HD VIDEO, COLOR, SOUND, 15'42'', 2015 _FOUR-SCREEN OVERVIEW  </p> 
 </div>                  
         
   <div class="mySlides fade">
