--- a/whythefuturedoesn'tneedus.html
+++ b/whythefuturedoesn'tneedus.html
@@ -27,13 +27,13 @@
         
         <div class="yellow2">
             
-        <a href="#" class="yellow" onclick="openCity('196') , currentSlide(1)" style="border: 1px black solid">09/10/2015</a>
+        <a href="#" class="yellow" onclick="openCity('196') , currentSlide(1)" >09/10/2015</a>
             <br>
-  <a  href="#" class="yellow" onclick="openCity('326'), currentSlide(4)" style="border: 1px black solid">02/01/2016</a>
+  <a  href="#" class="yellow" onclick="openCity('326'), currentSlide(4)" >02/01/2016</a>
             <br>
-  <a href="#" class="yellow" onclick="openCity('640'), currentSlide(6)"style="border: 1px black solid" >30/06/2016</a>
+  <a href="#" class="yellow" onclick="openCity('640'), currentSlide(6)" >30/06/2016</a>
             <br>
-  <a href="#" class="yellow" onclick="openCity('774') , currentSlide(10)" style="border: 1px black solid">22/04/2017</a>
+  <a href="#" class="yellow" onclick="openCity('774') , currentSlide(10)" >22/04/2017</a>
   
 </div>
     </div>
