--- a/Time.html
+++ b/Time.html
@@ -63,6 +63,7 @@
 <br>
 
 <div>
+    <div class="save"></div>
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
