--- a/TimeCounters.html
+++ b/TimeCounters.html
@@ -119,6 +119,9 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+    
+    <div class="save"></div>
+    
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
@@ -174,6 +177,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(4)"></span> 
   <span class="dot" onclick="currentSlide(5)"></span>
   <span class="dot" onclick="currentSlide(6)"></span> 
@@ -198,6 +202,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(7)"></span> 
   <span class="dot" onclick="currentSlide(8)"></span>
   <span class="dot" onclick="currentSlide(9)"></span> 
@@ -222,6 +227,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(10)"></span> 
   <span class="dot" onclick="currentSlide(11)"></span>
   <span class="dot" onclick="currentSlide(12)"></span> 
@@ -246,6 +252,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(13)"></span> 
   <span class="dot" onclick="currentSlide(14)"></span>
   <span class="dot" onclick="currentSlide(15)"></span> 
@@ -270,6 +277,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(16)"></span> 
   <span class="dot" onclick="currentSlide(17)"></span>
   <span class="dot" onclick="currentSlide(18)"></span> 
@@ -295,6 +303,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(19)"></span> 
   <span class="dot" onclick="currentSlide(20)"></span>
   <span class="dot" onclick="currentSlide(21)"></span> 
@@ -320,6 +329,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(22)"></span> 
   <span class="dot" onclick="currentSlide(23)"></span>
   <span class="dot" onclick="currentSlide(24)"></span> 
@@ -344,6 +354,7 @@ Photo Courtesy of Athanasios Alêxo.</p></a>   </div>
 <br>
 
 <div>
+    <div class="save"></div>
   <span class="dot" onclick="currentSlide(25)"></span> 
   <span class="dot" onclick="currentSlide(26)"></span>
   <span class="dot" onclick="currentSlide(27)"></span> 
@@ -392,6 +403,7 @@ A collaboration with Mattia Davide Amico_ Sonic interaction designer / Maker.</p
 <br>
 
 <div>
+     <div class="save"></div>
   <span class="dot" onclick="currentSlide(28)"></span> 
   <span class="dot" onclick="currentSlide(29)"></span>
   <span class="dot" onclick="currentSlide(30)"></span> 
