--- a/wastedlives.html
+++ b/wastedlives.html
@@ -42,7 +42,7 @@
 <div class="mySlides fade" >
     
   
-  <iframe scrolling="yes" src="https://performerbrera.wordpress.com/vite-di-scarto-al-teatro-dellarte/" width="100%" height="75%" ></iframe>
+  <iframe scrolling="yes" src="https://performerbrera.wordpress.com/vite-di-scarto-al-teatro-dellarte/"  ></iframe>
 
   
 </div>
@@ -70,7 +70,7 @@
 
 
 </div></div>
-        <br> 
+        <br> <br> 
         <div style="text-align: center; width:60%; margin:auto">
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span>
