--- a/whythefuturedoesn'tneedus.html
+++ b/whythefuturedoesn'tneedus.html
@@ -119,7 +119,7 @@ GRANNY SMITH APPLE, PLEXIGLASS, GOLD VARNISH, OCTOBER 2015
                     
 
 <br>
-
+                <div class="save"></div>
 <div>
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span>
@@ -181,7 +181,7 @@ Astronomer Mike Brown, a member of the discovery team, said via NASA.<br> "She s
 </div>
                     
 
-<br>
+<br><div class="save"></div>
 <div>
   <span class="dot" onclick="currentSlide(4)"></span> 
   <span class="dot" onclick="currentSlide(5)"></span>
@@ -210,7 +210,7 @@ Astronomer Mike Brown, a member of the discovery team, said via NASA.<br> "She s
 
 <br>
 
-<div>
+<div><div class="save"></div>
   <span class="dot" onclick="currentSlide(6)"></span> 
   <span class="dot" onclick="currentSlide(7)"></span>
   <span class="dot" onclick="currentSlide(8)"></span>
@@ -246,7 +246,7 @@ Astronomer Mike Brown, a member of the discovery team, said via NASA.<br> "She s
 
 <br>
 
-<div>
+<div><div class="save"></div>
   <span class="dot" onclick="currentSlide(10)"></span> 
   <span class="dot" onclick="currentSlide(11)"></span>
   <span class="dot" onclick="currentSlide(12)"></span> 
