--- a/20latori.html
+++ b/20latori.html
@@ -67,7 +67,7 @@
        <div class="mySlides fade">
   
   <img src="/immagini/20latori/ventilatori%20elena%203%20web.jpg" style="width:98%" border="1">
-   <p class="detail" style="text-align:right; text-transform: uppercase; ">Video installation Overview, Photo.screen, 2014
+   <p class="detail" style="text-align:right; text-transform: uppercase; ">Video installation Overview, Photo screen, 2014
 </p>
 </div>            
 
