--- a/4systems.html
+++ b/4systems.html
@@ -71,8 +71,7 @@ The formal similarities of the architectural structures become the only bond bet
 </p>
 <div style="height:5%"></div>
     <p class="detail">
-<span style="float:right">with: Varsia Adamou, Giulia Masci, Rocco Siliotto
-featuring track by Stefanos Papadopoulos</span><br>
+<span style="float:right">with: Varsia Adamou, Giulia Masci, Rocco Siliotto. <br>featuring track by Stefanos Papadopoulos</span><br>
 <span style="float:right">
 Shot in Cyprus, Milan, Niece, Passignano Sul Trasimeno, Rome, L’Aquila.</span></p><br>
 
