--- a/passidaparte.html
+++ b/passidaparte.html
@@ -141,6 +141,8 @@ Every step becomes the archive of a moment of forced static nature. 
 
 
 </div>
+        <div class="save"></div>
+        <br>
         <div style="text-align: center; width:60%; margin:auto">
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span>
