--- a/wastedlives.html
+++ b/wastedlives.html
@@ -41,7 +41,7 @@
 
 <div class="mySlides fade" >
     
-  
+  <p class="detail" style="text-align: center">[ performer, direction / production assistant ] for the project WASTED LIVES_ UNDERSKIN, curated by Loredana Putignani, 2013-2016</p>
   <iframe scrolling="yes" src="https://performerbrera.wordpress.com/vite-di-scarto-al-teatro-dellarte/"  ></iframe>
 
   
@@ -70,8 +70,8 @@
 
 
 </div></div>
-        <br> <br> 
-        <div style="text-align: center; width:60%; margin:auto">
+        
+        <div style="text-align: center; width:60%; margin:auto; margin-top: 6%;">
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span>
 </div>
