--- a/whythefuturedoesn'tneedus.html
+++ b/whythefuturedoesn'tneedus.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <title>Elena Adamou</title>
+    <title>ELENA ADAMOU</title>
     
     <link rel="stylesheet" type="text/css" href="adamou3.css">
     
