--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@ dimension of time-passing and the process of<br>
 familiarization into finding its corresponding physical place.<br>It focuses on an individual suspension of time, which lies beyond the space limits of the common
 perception of it.<br>
 Every work follows the traces of Origins.<br>
-I see origins not only as a native ëstigmaí related to birthplace but also as a pretext for a social and<br>
+I see origins not only as a native "stigma" related to birthplace but also as a pretext for a social and<br>
 anthropological analysis of the human being.<br>
 I measure the body bare of obligations, beyond<br>
 impositions and formalized titles, to identify<br>
