--- a/20latori.html
+++ b/20latori.html
@@ -40,8 +40,7 @@
        
 
 <div class="mySlides fade">
-    <p class="italic">Italian definition> ventilatore = fan, ventilator / 20=venti / latore=bearer 
-￼20 portable bearers</p> <p class="detail">Video installation (on loop)</p><div style="height: 20%"></div><p class="detail">Twenty separate windows reproduce the movement of a ceiling fan taken from different angles and in different speeds. Redefining the potential of the element which turns from object to subject. 
+    <p class="italic">Italian definition> ventilatore = fan, ventilator / 20=venti / latore=bearer<br>20 portable bearers</p> <p class="detail">Video installation (on loop)</p><div style="height: 20%"></div><p class="detail">Twenty separate windows reproduce the movement of a ceiling fan taken from different angles and in different speeds. Redefining the potential of the element which turns from object to subject. 
 <br><br>The old ventilator continues on spinning without causing any effective changes in the surrounding air of the house. 
 <br>The obsessive observation focuses the attention on the lack of functionality.</p>
     
