--- a/TimeCounters.html
+++ b/TimeCounters.html
@@ -379,7 +379,7 @@ The embroidery evolves independently until the initial marked space is fully fil
 Adding an actual dimension, renovated and renewable to what already had been.
 <br>The Naegleria takes its name from the ‘brain-eating’ amoeba, lethal for the human organism with an average waiting time of nearly 6 days.</p><br>
 <div class="linka2"><a href="https://maet.github.io/"> <p class="detail" style=" float: right">
-A collaboration with Mattia Davide Amico_ Sonic interaction designer / Maker.</p></a>   </div><br>
+A collaboration with Mattia Davide Amico_ Sonic interaction designer / Maker.</p></a>   </div><div style="height: 10.3vw"></div>
            
     </div>
 <div class="mySlides fade">
@@ -398,17 +398,19 @@ A collaboration with Mattia Davide Amico_ Sonic interaction designer / Maker.</p
 <img src="immagini/TimeCounters/Naedetail.jpg" style="width:98%" border="1">
     <p class="detail" style="text-align:right; ">80X80 CM, FRAME DIAMETER: 12,9 CM, CASE: 20 CM, CONDUCTIVE THREAD_NYLON ON SILK,      JULY 2017</p>
 </div>
-</div>
-
-<br>
-
-<div>
-     <div class="save"></div>
-  <span class="dot" onclick="currentSlide(28)"></span> 
+    <br>
+    <span class="dot" onclick="currentSlide(28)"></span> 
   <span class="dot" onclick="currentSlide(29)"></span>
   <span class="dot" onclick="currentSlide(30)"></span> 
     <span class="dot" onclick="currentSlide(31)"></span>
     <span class="dot" onclick="currentSlide(32)"></span>
+</div>
+
+
+
+<div>
+     
+  
 </div>
 </div>             
 </div>
