--- a/TimeCounters.html
+++ b/TimeCounters.html
@@ -379,7 +379,8 @@ The embroidery evolves independently until the initial marked space is fully fil
 Adding an actual dimension, renovated and renewable to what already had been.
 <br>The Naegleria takes its name from the ‘brain-eating’ amoeba, lethal for the human organism with an average waiting time of nearly 6 days.</p><br>
 <div class="linka2"><a href="https://maet.github.io/"> <p class="detail" style=" float: right">
-A collaboration with Mattia Davide Amico_ Sonic interaction designer / Maker.</p></a>   </div><div style="height: 10.3vw"></div>
+A collaboration with Mattia Davide Amico_ Sonic interaction designer / Maker.</p></a>   </div><br><br><br><div class="linka1">   
+    <a target="_blank" href="https://vimeo.com/240349215/a8a6914a72">video</a></div><div style="height: 7vw"></div>
            
     </div>
 <div class="mySlides fade">
