--- a/approximations.html
+++ b/approximations.html
@@ -58,12 +58,13 @@ It isn’t even a corridor, it is an open space. It’s outdoors, in the courtya
 Structures are left aside. The corridor becomes less and less visible. I am there 
 breathing.<br>The breath is subtle,<br>almost<br>imperceptible, it vanishes.<br>I don’t need to run.<br>I am not<br>in apnoea.<br>I am bare of obligations<br>I don’t feel vulnerable.<br>''I step a breath away from being it though.''<br>The distance seems<br>a thread away, a thin one.<br>There are four, seven, eleven days of stasis.<br>Maybe we are standing on a dock.<br>
 <br>
-Pause.
+Pause.</p>
+<p class="detail" style="float: right; text-align: right">Camera: Domenico Fogliaro, <br> Sound Design: Mattia Davide Amico</p>        
 
 
 
 ￼
-</p><br>
+<br>
 
 
     
